[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
# Own library
common = {path="../common"}

# Env Variables
dotenvy = "0.15"

# Runtime Async
tokio = {version = "1", features=["full"]}

# Web Framework
axum = { version = "0.7", features = ["macros"] }
axum-macros = "0.5"

# Error Handling and HTTP logging
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["trace", "request-id", "util"] }

# Database SQL (Postgres)
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono", "json"] }

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# JSON serialization
serde = {version = "1.0", features=["derive"]}
serde_json = "1.0"

# Kafka Client
rdkafka = { version = "0.36", features = ["cmake-build"] }

# Local Cache
moka = { version = "0.12", features = ["future"] }

# JWT
jsonwebtoken = "9.2"
once_cell = "1.18"

# Pawwrod Encryption
argon2 = "0.5"
rand_core = { version = "0.6", features = ["std"] } # Para salt
password-hash = "0.5"

# Encryption Api Keys
sha2 = "0.10"
hex = "0.4"
rand = "0.8"

# Email DEV Env
lettre = "0.11"