[package]
name = "core"
version = "0.1.0"
edition = "2024"

[dependencies]
# JSON serialization
serde = {version = "1.0", features=["derive"]}
serde_json = "1.0"

# Database SQL (Postgres)
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono", "json"] }

# Dates handling
chrono = { version = "0.4", features = ["serde"] }

# UUI handling
uuid = { version = "1.0", features = ["serde", "v4"] }

# Error handling
thiserror = "1.0"

# Async 
tokio = { version = "1", features = ["full"] }

# Redi + Polling
redis = { version = "0.24", features = ["tokio-comp"] }
deadpool-redis = "0.14"

# Local Cache
moka = { version = "0.12", features = ["future"] }

# Routes support 
glob = "0.3"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }