[package]
name = "worker"
version = "0.1.0"
edition = "2024"

[dependencies]
# Own library
common = {path="../common"}

# Async Runtime
tokio = { version = "1", features = ["full"] }

# Kafka Consumer
rdkafka = { version = "0.36", features = ["cmake-build"] }

# JSON serialization
serde = {version = "1.0", features=["derive"]}
serde_json = "1.0"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"

# Time
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0" }


sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "macros", "chrono", "uuid"] }